Fix displaying on small screens

--- a/style.css
+++ b/style.css
@@ -463,7 +463,7 @@ header {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 300px;
+	height: auto;
 	padding: 2rem;
 	background-color: #e0e0e0;
 	background-image: url(/images/back.png);
@@ -573,5 +573,6 @@ form input {
 
 	.aboutMeImage {
 		width: 400px;
+		
 	}
 }
